test/ui/test/unrecognized-intrinsic-type.stderr
error[E061]: ‘I-Definitely-Do-Not-Exist’ is not an intrinsic binding
  ┌─ ${TEST_FOLDER}/unrecognized-intrinsic-type.lushui:6:1
  │
6 │ @intrinsic
  │ ────────── claims the binding is intrinsic to the language
  │
  ├─ ${TEST_FOLDER}/unrecognized-intrinsic-type.lushui:7:6
  │
7 │ data I-Definitely-Do-Not-Exist: extern.core.type.Type
  │      ═════════════════════════
  │
 help: consider adding an explicit name to the attribute to overwrite the derived one
  │
6 │ @(intrinsic name)
  │ ~~~~~~~~~~~~~~~~~

error: aborting due to previous error

